# hilti-trimble-slam-challenge-2026

./: CMakeLists.txt  README.md  package.xml
challenge_tools_ros/: README.md
challenge_tools_ros/bag_helper/: image_stitching.py  ros2bag_to_euroc.py  ros2bag_to_ros1bag.py
challenge_tools_ros/download_data/: download_drive.py  download_drive_rclone.py
challenge_tools_ros/gt_helper/: challenge_tools_lib.py  groundtruth_server.py  static_transform_publisher.py  trajectory_logger.py  trajectory_plotter.py
challenge_tools_ros/runtime_helper/: apply_image_mask.py  image_conversion_node.py  map_server.py  publish_floorplans.sh  rotate_image_180.py
config/: procman.pmd
config/hilti_openvins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
config/hilti_stella_vslam/: equirectangular.yaml  fisheye.yaml
config/rviz/: rviz_map_server.rviz  rviz_ov.rviz  rviz_ov_and_map_server.rviz
groundtruth/floor_1_2025-05-05_run_1/: gt_poses.csv
groundtruth/floor_2_2025-05-05_run_1/: gt_poses.csv
groundtruth/floor_2_2025-10-28_run_1/: gt_poses.csv
groundtruth/floor_2_2025-10-28_run_2/: gt_poses.csv
groundtruth/floor_UG_2025-10-16_run_1/: gt_poses.csv
launch/: apply_image_mask_dual.launch  groundtruth_server.launch  map_server.launch  run_openvins.launch.py  run_stella_vslam.launch.py  rviz_map_server.launch  rviz_ov.launch  rviz_ov_and_map_server.launch
scripts/challenge_tools_ros/: apply_image_mask.py  challenge_tools_lib.py  groundtruth_converter.py  groundtruth_server.py  image_conversion_node.py  map_server.py  publish_floorplans.sh  rotate_image_180.py
